Style + Skybox fixes
Fixed up font styles for people and watch page, line page should not fit well in smaller screens (sweep not media queries), photoshopped clouds out of the skybox images

--- a/src/styles/desktop/components/watch_page.scss
+++ b/src/styles/desktop/components/watch_page.scss
@@ -56,8 +56,8 @@ $SUBTEXT_LETTER_SPACING: -0.07em;
 
       .number {
         font-family: 'Sprat Type Condensed';
-        font-size: 14.4vw;
-        font-weight: 300;
+        font-size: 11em;
+        font-weight: 400;
         letter-spacing: $SUBTEXT_LETTER_SPACING;
       }
 
