--- a/src/styles/mobile/pages/line_page.scss
+++ b/src/styles/mobile/pages/line_page.scss
@@ -202,8 +202,8 @@ $SLIDE_AMOUNT_B: -14.38vw;
       width: 100%;
       margin-top: 16.2vw;
       font-family: $FONT_BODY;
-      font-weight: 400;
-      font-size: 5vw;
+      font-weight: $FONT_WEIGHT_LIGHT;
+      font-size: $FONT_SIZE_BODY;
     }
 
     #left-bar {
